# domcrypto

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CUsersDiheimyCastroprojetosdomcryptoscriptsdeploy.sh  DEPLOY.md  Dockerfile.nextjs  Dockerfile.python  FRONTEND_RESUMO.md  MIGRATION-SUMMARY.md  MIGRATION.md  QA_REPORT.md  QUICKSTART.md  README.md  REFACTORING-SUMMARY.md  SETUP.md  docker-compose.yml  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  run_backend.py  tailwind.config.js  tsconfig.json
.claude/: CLAUDE.md  settings.local.json
.claude/skills/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docs/: DESIGN-SYSTEM.md  UI-UX-IMPROVEMENTS.md  agents-config.md  api.md  architecture.md  domarb-architecture-v1.md
docs/design-system/: MASTER.md
docs/specs/: BACKEND-SPEC.md  FRONTEND-SPEC.md  QA-SPEC.md  README.md
prisma/: schema.prisma
public/: .gitkeep
scripts/: deploy.bat  deploy.sh  setup.sh
src/: __init__.py
src/agents/: __init__.py
src/app/: FRONTEND_IMPLEMENTADO.md  globals.css  layout.tsx  page.tsx
src/backend/: BACKEND_IMPLEMENTADO.md  IMPLEMENTATION_SUMMARY.md  README.md  database.py  main.py  main_bkp.py
src/components/: index.ts
src/core/: __init__.py
src/hooks/: index.ts
src/lib/: api.ts  sse.ts
src/services/: __init__.py
src/store/: index.ts
src/types/: __init__.py  index.ts
src/utils/: __init__.py  (+2 more)
tests/: setup.ts  test_contract_v1.py
(+189 files in other folders)
